{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 421,
  "lineage": "01d40d3d-49d2-36f4-a054-13faa6a2c07e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_scraper_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-012967cc5a8c9f891",
            "arn": "arn:aws:ec2:us-east-1:101061110965:instance/i-0fa8d533188fe479e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "web_scraper_instance_profile",
            "id": "i-0fa8d533188fe479e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064193b895d4576ef",
            "private_dns": "ip-10-0-1-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.54",
            "public_ip": "54.197.102.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b3494f47b4c63c22",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-09076f1fab31d03fb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f915c4ffafd21680",
            "tags": {
              "Name": "Web Scraper EC2"
            },
            "tags_all": {
              "Name": "Web Scraper EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09076f1fab31d03fb"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.web_scraper_instance_profile",
            "aws_iam_role.web_scraper_role",
            "aws_security_group.web_scraper_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.web_scraper_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_scraper_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101061110965:internet-gateway/igw-01a0317a4f463e4d9",
            "id": "igw-01a0317a4f463e4d9",
            "owner_id": "101061110965",
            "vpc_id": "vpc-03d653186f7cfd570"
          },
          "dependencies": [
            "aws_vpc.web_scraper_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101061110965:route-table/rtb-08d7356ba8e7e3cbe",
            "id": "rtb-08d7356ba8e7e3cbe",
            "owner_id": "101061110965",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a0317a4f463e4d9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d653186f7cfd570"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web_scraper_igw",
            "aws_vpc.web_scraper_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079b40c6f39d689af",
            "route_table_id": "rtb-08d7356ba8e7e3cbe",
            "subnet_id": "subnet-0f915c4ffafd21680"
          },
          "dependencies": [
            "aws_internet_gateway.web_scraper_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.web_scraper_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_scraper_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101061110965:security-group/sg-06a697a7e736a15b1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a697a7e736a15b1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09076f1fab31d03fb"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20241123081019013600000006",
            "name_prefix": "terraform-",
            "owner_id": "101061110965",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group"
            },
            "tags_all": {
              "Name": "RDS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d653186f7cfd570"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_scraper_sg",
            "aws_vpc.web_scraper_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_scraper_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101061110965:security-group/sg-09076f1fab31d03fb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09076f1fab31d03fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241123081013819100000004",
            "name_prefix": "terraform-",
            "owner_id": "101061110965",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d653186f7cfd570"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_scraper_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101061110965:subnet/subnet-0b801674a37a63170",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b801674a37a63170",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "101061110965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03d653186f7cfd570"
          },
          "dependencies": [
            "aws_vpc.web_scraper_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101061110965:subnet/subnet-0f915c4ffafd21680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f915c4ffafd21680",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "101061110965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03d653186f7cfd570"
          },
          "dependencies": [
            "aws_vpc.web_scraper_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_scraper_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101061110965:vpc/vpc-03d653186f7cfd570",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc40c3cf83df46a2",
            "default_route_table_id": "rtb-0a9a8fdf92c645174",
            "default_security_group_id": "sg-00af50143b0a19413",
            "dhcp_options_id": "dopt-04bb9d34aac15e56f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d653186f7cfd570",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9a8fdf92c645174",
            "owner_id": "101061110965"
          }
        }
      ]
    }
  ]
}